Download service: Fix a bug that make prefetch download not working.

We didn't poll the initial state correctly after implementing background
network change observer. The unit test is based on linux implementation,
but android is based on a JNI bridge.


Bug: 760627
Change-Id: Ic69dada59cd7a02c836b97af4ce054484d2ba908
Reviewed-on: https://chromium-review.googlesource.com/644168
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498622}
Former-commit-id: bce0af2437b8f7ac612cebdb9a51c3dbd28da4b1